improved tmux status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,9 +20,9 @@ bind -n M-n next-window
 # set -g default-terminal "screen-256color"
 
 # right status bar
-battery_info="#[fg=black] #(echo $(acpi -b | grep -P -o '[0-9]+(?=%)'))%"
-date_time="#[fg=black]%a %d %b #[fg=black]%H:%M "
-set -g status-right "$battery_info | $date_time"
+battery_info="#[fg=black bg=green]#[fg=green bg=black] #(echo $(acpi -b | grep -P -o '[0-9]+(?=%)'))%"
+date_time="#[fg=#EEEEEE bg=black]#[fg=black bg=#EEEEEE] %a %d %b %H:%M "
+set -g status-right "$battery_info $date_time"
 
 setw -g window-status-current-style 'fg=black bg=blue'
 setw -g window-status-current-format '#[fg=green bg=blue] #[fg=black]#W#F #[fg=blue bg=green]'
